# tmp-FlashDB

./: .gitignore  AGENTS.md  Cargo.toml  INSTRUCTION.md
.opencode/: opencode.json
.opencode/agents/: code-evaluator-agent.md  code-executor-agent.md  code-review-agent-template.md  code-review-agent.md  failure-resolver.md  harness-dev-workflow-evaluator.md  parity-verifier.md  translate-code-review-agent.md
.opencode/harness/: README.md
.opencode/harness/features/: kvdb-crud.feature  kvdb-init.feature  kvdb-iteration-gc.feature  tsdb-append.feature  tsdb-init.feature  tsdb-query-management.feature
.opencode/harness/logs/: flashdb-run-log.md
.opencode/harness/manifests/: flashdb-test.golden.yaml  flashdb.golden.yaml
.opencode/harness/scripts/: build_golden_manifest.py  compare_graphs.py  convert_manifest_ignores.py  detect_placeholders.py  loop-orchestrator.ts  state-guard.py  verify_manifest_parity.py  workflow-todo-write.js
.opencode/harness/specs/: kvdb-spec.md  tsdb-spec.md
.opencode/harness/state/: flashdb-01-foundation-SUMMARY.md  (+8 more)
.opencode/plugins/: loop-governance.ts
.sisyphus/plans/: flashdb-c-to-rust.md
logs/: interaction.md
plans/: 00-start.md  02-kvdb.md  03-tsdb.md  04-final.md
src/: def.rs  flash_trait.rs  init.rs  kvdb.rs  lib.rs  low_lvl.rs  mock_flash.rs  tsdb.rs
tests/: bdd.rs  e2e_coexistence.rs  foundation_equiv.rs
tests/bdd/: kvdb_steps.rs  tsdb_steps.rs
tests/c-port/: kvdb_equiv.rs  tsdb_equiv.rs
tests/features/: kvdb-iteration-gc.feature  tsdb-append.feature  tsdb-init.feature  tsdb-query-management.feature
(+109 files in other folders)
